[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ml-py"
version = "1.0.0"
description = "Rust kernels for the ml machine learning toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Simon Roth"}]
keywords = ["machine-learning", "rust", "pyo3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24,<3.0"]

[project.urls]
Repository = "https://github.com/epagogy/ml"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ml_py"
