[package]
name    = "ml-r"
publish = false
version.workspace      = true
edition                = "2021"  # extendr requires 2021; override workspace 2024
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
ml_core     = { package = "ml", path = "../core" }
extendr-api = "0.7"
nalgebra    = { workspace = true }
serde_json  = { version = "1", features = ["float_roundtrip"] }
